--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,15 @@
     </dependencyManagement>
 
     <dependencies>
+
+        <!--JDBC -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.1.0</version>
         </dependency>
 
+        <!--DBCP-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
